[package]
name = "cbm-parser"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/markusstoller/cbm-parser"

[dependencies]
md5="*"
sha256="*"
sha1="*"
endian_codec = "*"
petscii="*"
hex-slice="*"
rusqlite = { version = "0.31", features = ["bundled"] }
async-channel="*"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "*", features = ["derive"] }
zip = "*"
sevenz-rust2 = "*"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
