[package]
name = "cbm-parser"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/markusstoller/cbm-parser"

[dependencies]
md5="*"
sha256="*"
sha1="*"
endian_codec = "*"
petscii="*"
hex-slice="*"
rusqlite = { version = "0.37", features = ["bundled"] }
async-channel="*"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
clap = { version = "*", features = ["derive"] }
zip = "*"
sevenz-rust2 = "*"
walkdir = "2"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["http1", "server"] }
url = "2"
html-escape = "0.2"
urlencoding = "2"
futures-util = "0.3"
bytes = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "tokio"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
